--- a/WarriorsTest/src/main/resources/templates/login.html
+++ b/WarriorsTest/src/main/resources/templates/login.html
@@ -1,135 +1,80 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head>
-  <meta charset="utf-8"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-  <meta name="description" content=""/>
-  <meta name="author" content=""/>
-  <title>Login</title>
-  <!--favicon-->
-  <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-  <!-- Bootstrap core CSS-->
-  <link href="/css/bootstrap.min.css" rel="stylesheet"/>
-  <!-- animate CSS-->
-  <link href="/css/animate.css" rel="stylesheet" type="text/css"/>
-  <!-- Icons CSS-->
-  <link href="/css/icons.css" rel="stylesheet" type="text/css"/>
-  <!-- Custom Style-->
-  <link href="/css/app-style.css" rel="stylesheet"/>
-  
-</head>
+<head th:replace="~{fragments/commons::head}">
+    <title></title></head>
 
-<body class="bg-theme bg-theme1">
+<body class="bg-theme bg-theme2">
 
+<div id="wrapper">
 
-
-<!-- Start wrapper-->
- <div id="wrapper">
-
- <div class="loader-wrapper"><div class="lds-ring"><div></div><div></div><div></div><div></div></div></div>
-	<div class="card card-authentication1 mx-auto my-5">
-		<div class="card-body">
-		 <div class="card-content p-2">
-		  <div class="card-title text-uppercase text-center py-3">Sign In</div>
-             <div th:if="${loginError}"   class="card-subtitle font-italic text-center error">Incorrect username or password!</div>
-             <br>
-		    <form method="post" action="/auth/login">
-			  <div class="form-group" >
-			  <label for="username" class="sr-only">Username</label>
-			   <div class="position-relative has-icon-right">
-				  <input th:classappend="${loginError !=  null? 'alert-danger' : ''}" type="text"  id="username" th:value="${username}" name="username" class="form-control input-shadow" placeholder="Enter Username">
-				  <div class="form-control-position">
-					  <i class="icon-user"></i>
-				  </div>
-			   </div>
-			  </div>
-			  <div class="form-group" >
-			  <label for="password" class="sr-only">Password</label>
-			   <div class="position-relative has-icon-right">
-				  <input th:classappend="${loginError !=  null? 'alert-danger' : ''}" type="password" name="password" id="password" class="form-control input-shadow" placeholder="Enter Password">
-				  <div class="form-control-position">
-					  <i class="icon-lock"></i>
-				  </div>
-			   </div>
-			  </div>
-			<div class="form-row">
-			 <div class="form-group col-6">
-			   <div class="icheck-material-white">
-                <input type="checkbox" id="user-checkbox" name="remember-me"/>
-                <label for="user-checkbox">Remember me</label>
-			  </div>
-			 </div>
-<!--			 <div class="form-group col-6 text-right">-->
-<!--			  <a href="reset-password.html">Reset Password</a>-->
-<!--			 </div>-->
-			</div>
-			 <button type="submit"  class="btn btn-light btn-block">Sign In</button>
-			 <div class="form-row mt-4">
-			</div>
-                <input
-                        type="hidden"
-                        th:name="${_csrf.parameterName}"
-                        th:value="${_csrf.token}" />
-            </form>
-		   </div>
-		  </div>
-		  <div class="card-footer text-center py-3">
-		    <p class="text-warning mb-0">Do not have an account? <a th:href="@{/auth/register}"> Sign Up here</a></p>
-		  </div>
-	     </div>
-
-
-	<!--start color switcher-->
-   <div class="right-sidebar">
-    <div class="switcher-icon">
-      <i class="zmdi zmdi-settings zmdi-hc-spin"></i>
+    <div class="loader-wrapper">
+        <div class="lds-ring">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </div>
-    <div class="right-sidebar-content">
+    <div class="card card-authentication1 mx-auto my-5">
+        <div class="card-body">
+            <div class="card-content p-2">
+                <div class="card-title text-uppercase text-center py-3">Sign In</div>
+                <div th:if="${loginError}" class="card-subtitle font-italic text-center error">Incorrect username or
+                    password!
+                </div>
+                <br>
+                <form method="post" action="/auth/login">
+                    <div class="form-group">
+                        <label for="username" class="sr-only">Username</label>
+                        <div class="position-relative has-icon-right">
+                            <input th:classappend="${loginError !=  null? 'alert-danger' : ''}" type="text"
+                                   id="username" th:value="${username}" name="username"
+                                   class="form-control input-shadow" placeholder="Enter Username">
+                            <div class="form-control-position">
+                                <i class="icon-user"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password" class="sr-only">Password</label>
+                        <div class="position-relative has-icon-right">
+                            <input th:classappend="${loginError !=  null? 'alert-danger' : ''}" type="password"
+                                   name="password" id="password" class="form-control input-shadow"
+                                   placeholder="Enter Password">
+                            <div class="form-control-position">
+                                <i class="icon-lock"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-6">
+                            <div class="icheck-material-white">
+                                <input type="checkbox" id="user-checkbox" name="remember-me"/>
+                                <label for="user-checkbox">Remember me</label>
+                            </div>
+                        </div>
+                        <!--			 <div class="form-group col-6 text-right">-->
+                        <!--			  <a href="reset-password.html">Reset Password</a>-->
+                        <!--			 </div>-->
+                    </div>
+                    <button type="submit" class="btn btn-light btn-block">Sign In</button>
+                    <div class="form-row mt-4">
+                    </div>
+                    <input
+                            type="hidden"
+                            th:name="${_csrf.parameterName}"
+                            th:value="${_csrf.token}"/>
+                </form>
+            </div>
+        </div>
+        <div class="card-footer text-center py-3">
+            <p class="text-warning mb-0">Do not have an account? <a th:href="@{/auth/register}"> Sign Up here</a></p>
+        </div>
+    </div>
+</div><!--wrapper-->
 
-      <p class="mb-0">Gaussion Texture</p>
-      <hr>
-      
-      <ul class="switcher">
-        <li id="theme1"></li>
-        <li id="theme2"></li>
-        <li id="theme3"></li>
-        <li id="theme4"></li>
-        <li id="theme5"></li>
-        <li id="theme6"></li>
-      </ul>
+<div th:replace="~{fragments/scripts}">
+</div>
 
-      <p class="mb-0">Gradient Background</p>
-      <hr>
-      
-      <ul class="switcher">
-        <li id="theme7"></li>
-        <li id="theme8"></li>
-        <li id="theme9"></li>
-        <li id="theme10"></li>
-        <li id="theme11"></li>
-        <li id="theme12"></li>
-		<li id="theme13"></li>
-        <li id="theme14"></li>
-        <li id="theme15"></li>
-      </ul>
-      
-     </div>
-   </div>
-  <!--end color switcher-->
-	
-	</div><!--wrapper-->
-	
-  <!-- Bootstrap core JavaScript-->
-  <script src="/js/jquery.min.js"></script>
-  <script src="/js/popper.min.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
-	
-  <!-- sidebar-menu js -->
-  <script src="/js/sidebar-menu.js"></script>
-  
-  <!-- Custom scripts -->
-  <script src="/js/app-script.js"></script>
-  
 </body>
 </html>
