--- a/WarriorsTest/src/main/resources/templates/Register.html
+++ b/WarriorsTest/src/main/resources/templates/Register.html
@@ -17,42 +17,46 @@
                     <div class="form-group">
                         <label for="username" class="sr-only">Name</label>
                         <div class="position-relative has-icon-right">
-                            <input th:field="*{username}" th:errorclass="'alert-danger'" type="text" id="username"
+                            <input required minlength="3" maxlength="20" th:field="*{username}" th:errorclass="'alert-danger'" type="text" id="username"
                                    class="form-control input-shadow" placeholder="Enter Your Name">
                             <div class="form-control-position">
                                 <i class="icon-user"></i>
                             </div>
                         </div>
+                        <small class=" text-danger" th:errors="*{username}">Username error message</small>
                     </div>
                     <div class="form-group">
                         <label for="email" class="sr-only">Email</label>
                         <div class="position-relative has-icon-right">
-                            <input th:field="*{email}" th:errorclass="'alert-danger'" type="text" id="email"
+                            <input required th:field="*{email}" th:errorclass="'alert-danger'" type="text" id="email"
                                    class="form-control input-shadow" placeholder="Enter Your Email ID">
                             <div class="form-control-position">
                                 <i class="icon-envelope-open"></i>
                             </div>
                         </div>
+                        <small class=" text-danger" th:errors="*{email}">Username error message</small>
                     </div>
                     <div class="form-group">
                         <label for="password" class="sr-only">Password</label>
                         <div class="position-relative has-icon-right">
-                            <input th:field="*{password}" th:errorclass="'alert-danger'" type="password" id="password"
+                            <input required minlength="3" maxlength="20" th:field="*{password}" th:errorclass="'alert-danger'" type="password" id="password"
                                    class="form-control input-shadow" placeholder="Choose Password">
                             <div class="form-control-position">
                                 <i class="icon-lock"></i>
                             </div>
                         </div>
+                        <small class="text-danger" th:errors="*{password}">Username error message</small>
                     </div>
                     <div class="form-group">
                         <label for="confirmPassword" class="sr-only">Password</label>
                         <div class="position-relative has-icon-right">
-                            <input th:field="*{confirmPassword}" th:errorclass="'alert-danger'" type="password"
+                            <input required minlength="3" maxlength="20" th:field="*{confirmPassword}" th:errorclass="'alert-danger'" type="password"
                                    id="confirmPassword" class="form-control input-shadow" placeholder="Choose Password">
                             <div class="form-control-position">
                                 <i class="icon-lock"></i>
                             </div>
                         </div>
+                        <small class="text-danger" th:errors="*{confirmPassword}">Username error message</small>
                     </div>
                     <button type="submit" class="btn btn-light btn-block waves-effect waves-light">Sign Up</button>
                     <div class="form-row mt-4">
