--- a/WarriorsTest/src/main/resources/templates/HeroDetails.html
+++ b/WarriorsTest/src/main/resources/templates/HeroDetails.html
@@ -20,7 +20,8 @@
                         <div class="card-body">
                             <h5 class="card-title" th:text="${hero.getName()}"></h5>
                             <h6 class="card-title" th:text="${'level - ' + hero.getLevel()}"></h6>
-                            <img th:src="@{${'/images/' + hero.getHeroClass().name()+ '.png'}}" class="inventory-image-icon"
+                            <img th:src="@{${'/images/' + hero.getHeroClass().name()+ '.png'}}"
+                                 class="inventory-image-icon"
                                  alt="image">
                             <div class="card-body">
                                 <h5 class="card-title">Stats</h5>
@@ -64,73 +65,24 @@
                                 </div>
                             </div>
                         </div>
-                        </div>
                     </div>
                 </div>
+            </div>
             <div class="row mt-3 text-center">
-                <a class="col-lg-3" th:href="@{/items/details/{itemID}(itemID = ${1})}">
+                <a th:each="equippedItem:${equippedItems}" class="col-lg-3"
+                   th:href="@{/items/details/{itemID}(itemID = ${equippedItem.id})}">
 
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Small Table</h5>
-                            <img src="/images/SWORD.png" class="inventory-image-icon" alt="image">
+                            <h5 class="card-title" th:text="${equippedItem.getName()}"></h5>
+                            <img th:src="@{${'/images/' + equippedItem.getType().name()+ '.png'}}"
+                                 class="inventory-image-icon"
+                                 alt="image">
                         </div>
                     </div>
 
                 </a>
-                <div class="col-lg-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Responsive Table</h5>
-                            <img src="/images/MANA_POTION.png" class="inventory-image-icon" alt="image">
-                        </div>
-                    </div>
-                </div>
 
-                <div class="col-lg-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Responsive Table</h5>
-                            <img src="/images/STAFF.png" class="inventory-image-icon" alt="image">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Responsive Table</h5>
-                            <img src="/images/BOW.png" class="inventory-image-icon" alt="image">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Responsive Table</h5>
-                            <img src="/images/HELMET.png" class="inventory-image-icon" alt="image">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Responsive Table</h5>
-                            <img src="/images/CHEST.png" class="inventory-image-icon" alt="image">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <h5 class="card-title">Responsive Table</h5>
-                            <img src="/images/BOOTS.png" class="inventory-image-icon" alt="image">
-                        </div>
-                    </div>
-                </div>
             </div>
 
 
