--- a/WarriorsTest/src/main/resources/templates/Ranking.html
+++ b/WarriorsTest/src/main/resources/templates/Ranking.html
@@ -13,7 +13,7 @@
         <div class="container-fluid">
             <div class="card mt-3">
                 <div class="card-body">
-                    <h5 class="card-title">Ranking by level</h5>
+                    <h5 class="card-title">Top 100 - Ranking by level</h5>
                     <div class="table-responsive">
                         <table class="table table-hover">
                             <thead>
