--- a/WarriorsTest/src/main/resources/templates/fragments/topBar.html
+++ b/WarriorsTest/src/main/resources/templates/fragments/topBar.html
@@ -10,9 +10,11 @@
 
         <ul class="navbar-nav align-items-center right-nav-link">
             <li><div>
-                <span>
-                    sdada
-                </span>
+                <span id="health" class="text-danger"></span>
+                <span id="mana" class="text-primary"></span>
+                <span id="experience"></span>
+                <span id="level"></span>
+                <span id="gold" class="text-gold"></span>
             </div></li>
             <li sec:authorize="isAuthenticated()" class="nav-item">
                 <a class="nav-link dropdown-toggle dropdown-toggle-nocaret" data-toggle="dropdown" href="#">
