--- a/WarriorsTest/src/main/resources/templates/AdminPanel.html
+++ b/WarriorsTest/src/main/resources/templates/AdminPanel.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head th:replace="~{fragments/commons::head}">
-  <title></title></head>
+    <title></title></head>
 
+<style>
+    select option {
+        margin: 40px;
+        background: rgba(0, 0, 0, 0);
+        color: #000;
+    }
+</style>
 <body class="bg-theme bg-theme2">
+
 <div id="wrapper">
 
-  <div th:replace="~{fragments/sideBar}"></div>
-
-  <div th:replace="~{fragments/topBar}"></div>
-
-  <div th:replace="~{fragments/scripts}"></div>
-  <div class="overlay toggle-menu"></div>
-
+    <div th:replace="~{fragments/sideBar}"></div>
+    <div th:replace="~{fragments/topBar}"></div>
+    <div class="content-wrapper">
+        <div class="container-fluid">
+            <div class="card card-authentication1 mx-auto my-5">
+                <div class="card-body">
+                    <div class="card-content p-2">
+                        <div class="card-title text-center py-3">Admin Panel</div>
+                        <a class="btn btn-light btn-block" th:href="@{/admin/changeUserRoles}">Change Role</a>
+                        <a class="btn btn-light btn-block" th:href="@{/admin/users/{page}(page = 0)}">See Users</a>
+                        <div class="form-row mt-4">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="overlay toggle-menu"></div>
 
 </div>
+
+<div th:replace="~{fragments/scripts}">
+</div>
+
 </body>
 </html>
