--- a/WarriorsTest/src/main/resources/templates/ShopItem.html
+++ b/WarriorsTest/src/main/resources/templates/ShopItem.html
@@ -21,8 +21,9 @@
                 <div class="col-lg-2">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title" th:text="${item.name}"></h5>
-                            <img th:src="@{${'/images/' + item.getType().name()+ '.png'}}" class="inventory-image-icon"
+                            <h5 class="card-title" th:text="${shopItem.name}"></h5>
+                            <img th:src="@{${'/images/' + shopItem.getType().name()+ '.png'}}"
+                                 class="inventory-image-icon"
                                  alt="image">
                         </div>
                     </div>
@@ -33,9 +34,10 @@
                         <div class="card-body">
                             <h5 class="card-title">Actions</h5>
 
-                            <form class="mt-3" th:action="@{/shop/buy/{id}/{item}(id = ${id},item=${item})}"
+                            <form class="mt-3"
+                                  th:action="@{/shop/buy/{id}/{price}/{item}(id = ${id},price = ${shopItem.getPrice()},item=${shopItem})}"
                                   th:method="post">
-                                <button type="submit" class="btn btn-light btn-block">Buy</button>
+                                <button type="submit" class="btn btn-light btn-block" th:text="${'Buy: price ' +shopItem.getPrice()+ ' gold'}">Buy</button>
                             </form>
 
                         </div>
@@ -55,36 +57,36 @@
                                     <tbody>
                                     <tr>
                                         <th scope="row" colspan="2">Rarity:</th>
-                                        <th colspan="2" th:text="${item.getRarity()}"></th>
+                                        <th colspan="2" th:text="${shopItem.getRarity()}"></th>
                                     </tr>
                                     <tr>
                                         <th scope="row" colspan="2">Item Type:</th>
-                                        <th colspan="2" th:text="${item.getItemType()}"></th>
+                                        <th colspan="2" th:text="${shopItem.getItemType()}"></th>
                                     </tr>
                                     <tr>
                                         <th scope="row" colspan="2">Type:</th>
-                                        <th colspan="2" th:text="${item.getType()}"></th>
+                                        <th colspan="2" th:text="${shopItem.getType()}"></th>
                                     </tr>
                                     <tr>
                                         <th scope="row" colspan="2">Attack:</th>
-                                        <th colspan="2" th:text="${item.getStat()}"></th>
+                                        <th colspan="2" th:text="${shopItem.getStat()}"></th>
                                     </tr>
 
                                     <tr>
                                         <th scope="row" colspan="2">Durability:</th>
-                                        <th colspan="2" th:text="${item.getDurability()}"></th>
+                                        <th colspan="2" th:text="${shopItem.getDurability()}"></th>
                                     </tr>
                                     <tr>
                                         <th scope="row" colspan="2">Element:</th>
-                                        <th colspan="2" th:text="${item.getElement()}"></th>
+                                        <th colspan="2" th:text="${shopItem.getElement()}"></th>
                                     </tr>
                                     <tr>
                                         <th scope="row" colspan="2">Weight:</th>
-                                        <th colspan="2" th:text="${item.getWeight()}"></th>
+                                        <th colspan="2" th:text="${shopItem.getWeight()}"></th>
                                     </tr>
                                     <tr>
                                         <th scope="row" colspan="2">Material:</th>
-                                        <th colspan="2" th:text="${item.getMaterial()}"></th>
+                                        <th colspan="2" th:text="${shopItem.getMaterial()}"></th>
                                     </tr>
                                     </tbody>
                                 </table>
@@ -100,7 +102,7 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Description:</h5>
-                            <p th:text="${item.getDescription()}"></p>
+                            <p th:text="${shopItem.getDescription()}"></p>
                         </div>
                     </div>
                 </div>
