--- a/WarriorsTest/src/main/resources/templates/fragments/sideBar.html
+++ b/WarriorsTest/src/main/resources/templates/fragments/sideBar.html
@@ -8,8 +8,8 @@
     </div>
     <ul class="sidebar-menu do-nicescrol">
         <li>
-            <a sec:authorize="isAuthenticated()" th:href="@{/news}">
-                <i class="zmdi zmdi-assignment"></i> <span>News</span>
+            <a sec:authorize="isAuthenticated()" th:href="@{/home}">
+                <i class="zmdi zmdi-assignment"></i> <span>Home</span>
             </a>
         </li>
 
@@ -22,6 +22,11 @@
         <li>
             <a sec:authorize="isAuthenticated()" th:href="@{/inventory}">
                 <i class="zmdi zmdi-grid"></i> <span>Inventory</span>
+            </a>
+        </li>
+        <li>
+            <a sec:authorize="isAuthenticated()" th:href="@{/spells}">
+                <i class="zmdi zmdi-album"></i> <span>Spells</span>
             </a>
         </li>
 
