--- a/WarriorsTest/src/main/resources/templates/index.html
+++ b/WarriorsTest/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="https://www.thymeleaf.org">
-<head th:replace="~{fragments/commons::head}"><title>Warriors Destiny</title></head>
+<head th:replace="~{fragments/commons::head}"><title>Warriors Destiny</title>
+</head>
 
 <body class="bg-theme bg-theme2">
 
