--- a/WarriorsTest/src/main/resources/templates/fragments/sideBar.html
+++ b/WarriorsTest/src/main/resources/templates/fragments/sideBar.html
@@ -8,8 +8,8 @@
     </div>
     <ul class="sidebar-menu do-nicescrol">
         <li>
-            <a sec:authorize="isAuthenticated()" th:href="@{/home}">
-                <i class="zmdi zmdi-assignment"></i> <span>Home</span>
+            <a sec:authorize="isAuthenticated()" th:href="@{/hero/details/my-hero}">
+                <i class="zmdi zmdi-assignment"></i> <span>My Hero</span>
             </a>
         </li>
 
