--- a/WarriorsTest/src/main/resources/templates/error/HeroAlreadyCreated.html
+++ b/WarriorsTest/src/main/resources/templates/error/HeroAlreadyCreated.html
@@ -89,7 +89,7 @@ a {
 <p><span>You have already created a hero!</span></p>
 <code><span>this_page</span>.<em>is seen when hero creation is triggered while </em> hero!= null;</code>
 <code><span>please</span> <b>return to </b> <span> the battle</span>;</code>
-<div style="text-align: center;"><a th:href="@{/home}">Home</a></div>
+<div style="text-align: center;"><a th:href="@{/}">Home</a></div>
 <script>
     function type(n, t) {
         const str = document.getElementsByTagName("code")[n].innerHTML.toString();
