--- a/WarriorsTest/src/main/resources/templates/fragments/topBar.html
+++ b/WarriorsTest/src/main/resources/templates/fragments/topBar.html
@@ -30,7 +30,7 @@
                                                          alt="user avatar"></div>
                                 <div class="media-body">
                                     <h6 class="mt-2 user-title" sec:authentication="principal.username"></h6>
-                                    <p class="user-subtitle" sec:authentication="principal.email"></p>
+<!--                                    <p class="user-subtitle" sec:authentication="${principal.email}"></p>-->
                                 </div>
                             </div>
                         </a>
